--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "main": "./dist/main/electron-main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "npm run start:dev:hot-reloading:renderer+main",
+    "start:dev:hot-reloading:renderer+main": "npm run build:dev:preload && npm-run-all -p hot:dev:renderer hot:dev:main",
+    "start:dev:hot-reloading:renderer-only": "npm-run-all -p build:dev:preload build:dev:main && npm-run-all -p hot:dev:renderer hot:dev:main-no-restart",
+    "start:static": "electron .",
     "clean": "npx rimraf dist release-builds node_modules .angular",
     "build:dev:renderer": "ng build",
     "build:prod:renderer": "ng build --configuration production",
@@ -25,7 +28,10 @@
     "test:lint": "ng lint",
     "test:e2e": "ng e2e",
     "package": "electron-packager . angular-electron-boilerplate --asar --overwrite --prune=true --derefSymlinks=false --ignore=\"/node_modules|/src|.vscode|.editorconfig|.gitignore|.map|angular.json|tslint.json|README.md|package-lock.json|LICENSE\" --out=release-builds",
-    "release": "npm run build:prod:all  && npm run package"
+    "release": "npm run build:prod:all  && npm run package",
+    "hot:dev:renderer": "ng serve --watch & echo Renderer shutdown",
+    "hot:dev:main": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && webpack --watch --config ./src/main/webpack.ts --mode development",
+    "hot:dev:main-no-restart": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && electron . & kill-port --port 4200 >NUL"
   },
   "private": true,
   "devDependencies": {
@@ -57,6 +63,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "kill-port-process": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "rxjs": "~7.8.1",
@@ -65,8 +72,10 @@
     "tslib": "^2.6.3",
     "tslint": "~6.1.3",
     "typescript": "^5.5.4",
+    "wait-on": "^5.2.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
+    "webpack-electron-reload": "^1.0.1",
     "zone.js": "^0.14.10"
   }
 }
