--- a/angular.json
+++ b/angular.json
@@ -16,12 +16,15 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/renderer",
+            "outputPath": {
+              "base": "dist/renderer"
+            },
             "index": "src/renderer/src/index.html",
-            "main": "src/renderer/src/main.ts",
-            "polyfills": "src/renderer/src/polyfills.ts",
+            "polyfills": [
+              "src/renderer/src/polyfills.ts"
+            ],
             "tsConfig": "src/renderer/tsconfig.app.json",
             "aot": true,
             "assets": [
@@ -31,7 +34,8 @@
               "src/renderer/src/styles.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "browser": "src/renderer/src/main.ts"
           },
           "configurations": {
             "production": {
@@ -46,8 +50,6 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": false,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -65,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "renderer:build"
+            "buildTarget": "renderer:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "renderer:build:production"
+              "buildTarget": "renderer:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "renderer:build"
+            "buildTarget": "renderer:build"
           }
         },
         "test": {
@@ -126,5 +128,31 @@
   },
   "cli": {
     "analytics": false
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "type": "component"
+    },
+    "@schematics/angular:directive": {
+      "type": "directive"
+    },
+    "@schematics/angular:service": {
+      "type": "service"
+    },
+    "@schematics/angular:guard": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:interceptor": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:module": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:pipe": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:resolver": {
+      "typeSeparator": "."
+    }
   }
 }
