--- a/package.json
+++ b/package.json
@@ -29,26 +29,26 @@
     "test:e2e": "ng e2e",
     "package": "electron-packager . angular-electron-boilerplate --asar --overwrite --prune=true --derefSymlinks=false --ignore=\"/node_modules|/src|.vscode|.editorconfig|.gitignore|.map|angular.json|tslint.json|README.md|package-lock.json|LICENSE\" --out=release-builds",
     "release": "npm run build:prod:all  && npm run package",
-    "hot:dev:renderer": "ng serve --watch & echo Renderer shutdown",
+    "hot:dev:renderer": "ng serve --no-hmr & echo Renderer shutdown",
     "hot:dev:main": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && webpack --watch --config ./src/main/webpack.ts --mode development",
     "hot:dev:main-no-restart": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && electron . & kill-port --port 4200 >NUL"
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.1",
-    "@angular/animations": "^18.2.1",
-    "@angular/cdk": "^18.2.1",
-    "@angular/cli": "^18.2.1",
-    "@angular/common": "^18.2.1",
-    "@angular/compiler": "^18.2.1",
-    "@angular/compiler-cli": "^18.2.1",
-    "@angular/core": "^18.2.1",
-    "@angular/forms": "^18.2.1",
-    "@angular/language-service": "^18.2.1",
-    "@angular/material": "^18.2.1",
-    "@angular/platform-browser": "^18.2.1",
-    "@angular/platform-browser-dynamic": "^18.2.1",
-    "@angular/router": "^18.2.1",
+    "@angular-devkit/build-angular": "^20.3.6",
+    "@angular/animations": "^20.3.6",
+    "@angular/cdk": "^20.2.7",
+    "@angular/cli": "^20.3.6",
+    "@angular/common": "^20.3.6",
+    "@angular/compiler": "^20.3.6",
+    "@angular/compiler-cli": "^20.3.6",
+    "@angular/core": "^20.3.6",
+    "@angular/forms": "^20.3.6",
+    "@angular/language-service": "^20.3.6",
+    "@angular/material": "^20.2.7",
+    "@angular/platform-browser": "^20.3.6",
+    "@angular/platform-browser-dynamic": "^20.3.6",
+    "@angular/router": "^20.3.6",
     "@types/jasmine": "^5.1.4",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "^22.5.0",
@@ -71,11 +71,11 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "tslint": "~6.1.3",
-    "typescript": "^5.5.4",
+    "typescript": "^5.9.3",
     "wait-on": "^5.2.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-electron-reload": "^1.0.1",
-    "zone.js": "^0.14.10"
+    "zone.js": "^0.15.1"
   }
 }
