Fix linter and Karma/Jasmine, also fix found issues with linting and testing.

--- a/src/renderer/tsconfig.app.json
+++ b/src/renderer/tsconfig.app.json
@@ -10,6 +10,10 @@
     "../window-interface/index.d.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.ts",
+  ],
+  "exclude": [
+    "src/test.ts",
+    "src/**/*.spec.ts"
   ]
 }
