--- a/angular.json
+++ b/angular.json
@@ -1,158 +1,154 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "src",
-  "projects": {
-    "renderer": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true
-        }
-      },
-      "root": "src/renderer",
-      "sourceRoot": "src/renderer/src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:application",
-          "options": {
-            "outputPath": {
-              "base": "dist/renderer"
-            },
-            "index": "src/renderer/src/index.html",
-            "polyfills": [
-              "src/renderer/src/polyfills.ts"
-            ],
-            "tsConfig": "src/renderer/tsconfig.app.json",
-            "aot": true,
-            "assets": [
-              "src/renderer/src/assets"
-            ],
-            "styles": [
-              "src/renderer/src/styles.css",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-            ],
-            "scripts": [],
-            "browser": "src/renderer/src/main.ts"
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/renderer/src/environments/environment.ts",
-                  "with": "src/renderer/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": false,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ]
-            }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "buildTarget": "renderer:build"
-          },
-          "configurations": {
-            "production": {
-              "buildTarget": "renderer:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "buildTarget": "renderer:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/renderer/src/test.ts",
-            "polyfills": "src/renderer/src/polyfills.ts",
-            "tsConfig": "src/renderer/tsconfig.spec.json",
-            "karmaConfig": "src/renderer/karma.conf.js",
-            "assets": [
-              "src/renderer/src/assets"
-            ],
-            "styles": [
-              "src/renderer/src/styles.css",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "src/renderer/tsconfig.app.json",
-              "src/renderer/tsconfig.spec.json",
-              "src/renderer/e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "src/renderer/e2e/protractor.conf.js",
-            "devServerTarget": "renderer:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "renderer:serve:production"
-            }
-          }
-        }
-      }
-    }
-  },
-  "cli": {
-    "analytics": false
-  },
-  "schematics": {
-    "@schematics/angular:component": {
-      "type": "component"
-    },
-    "@schematics/angular:directive": {
-      "type": "directive"
-    },
-    "@schematics/angular:service": {
-      "type": "service"
-    },
-    "@schematics/angular:guard": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:interceptor": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:module": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:pipe": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:resolver": {
-      "typeSeparator": "."
-    }
-  }
+	"$schema":        "./node_modules/@angular/cli/lib/config/schema.json",
+	"version":        1,
+	"newProjectRoot": "src",
+	"projects":       {
+		"renderer": {
+			"projectType": "application",
+			"schematics":  {
+				"@schematics/angular:component": {
+					"inlineTemplate": true,
+					"inlineStyle":    true
+				}
+			},
+			"root":        "src/renderer",
+			"sourceRoot":  "src/renderer/src",
+			"prefix":      "app",
+			"architect":   {
+				"build":        {
+					"builder":        "@angular-devkit/build-angular:application",
+					"options":        {
+						"outputPath": {
+							"base": "dist/renderer"
+						},
+						"index":      "src/renderer/src/index.html",
+						"polyfills":  [
+							"src/renderer/src/polyfills.ts"
+						],
+						"tsConfig":   "src/renderer/tsconfig.app.json",
+						"aot":        true,
+						"assets":     [
+							"src/renderer/src/assets"
+						],
+						"styles":     [
+							"src/renderer/src/styles.css",
+							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+						],
+						"scripts":    [],
+						"browser":    "src/renderer/src/main.ts"
+					},
+					"configurations": {
+						"production": {
+							"fileReplacements": [
+								{
+									"replace": "src/renderer/src/environments/environment.ts",
+									"with":    "src/renderer/src/environments/environment.prod.ts"
+								}
+							],
+							"optimization":     true,
+							"outputHashing":    "all",
+							"sourceMap":        false,
+							"namedChunks":      false,
+							"extractLicenses":  false,
+							"budgets":          [
+								{
+									"type":           "initial",
+									"maximumWarning": "2mb",
+									"maximumError":   "5mb"
+								},
+								{
+									"type":           "anyComponentStyle",
+									"maximumWarning": "6kb"
+								}
+							]
+						}
+					}
+				},
+				"serve":        {
+					"builder":        "@angular-devkit/build-angular:dev-server",
+					"options":        {
+						"buildTarget": "renderer:build"
+					},
+					"configurations": {
+						"production": {
+							"buildTarget": "renderer:build:production"
+						}
+					}
+				},
+				"extract-i18n": {
+					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"options": {
+						"buildTarget": "renderer:build"
+					}
+				},
+				"test":         {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"main":        "src/renderer/src/test.ts",
+						"polyfills":   "src/renderer/src/polyfills.ts",
+						"tsConfig":    "src/renderer/tsconfig.spec.json",
+						"karmaConfig": "src/renderer/karma.conf.js",
+						"assets":      [
+							"src/renderer/src/assets"
+						],
+						"styles":      [
+							"src/renderer/src/styles.css",
+							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+						],
+						"scripts":     []
+					}
+				},
+				"lint":         {
+					"builder": "@angular-eslint/builder:lint",
+					"options": {
+						"lintFilePatterns": [
+							"src/renderer/src/**/*.ts",
+							"src/renderer/src/**/*.html"
+						]
+					}
+				},
+				"e2e":          {
+					"builder":        "@angular-devkit/build-angular:protractor",
+					"options":        {
+						"protractorConfig": "src/renderer/e2e/protractor.conf.js",
+						"devServerTarget":  "renderer:serve"
+					},
+					"configurations": {
+						"production": {
+							"devServerTarget": "renderer:serve:production"
+						}
+					}
+				}
+			}
+		}
+	},
+	"cli":            {
+		"analytics": false
+	},
+	"schematics":     {
+		"@schematics/angular:component":   {
+			"type": "component"
+		},
+		"@schematics/angular:directive":   {
+			"type": "directive"
+		},
+		"@schematics/angular:service":     {
+			"type": "service"
+		},
+		"@schematics/angular:guard":       {
+			"typeSeparator": "."
+		},
+		"@schematics/angular:interceptor": {
+			"typeSeparator": "."
+		},
+		"@schematics/angular:module":      {
+			"typeSeparator": "."
+		},
+		"@schematics/angular:pipe":        {
+			"typeSeparator": "."
+		},
+		"@schematics/angular:resolver":    {
+			"typeSeparator": "."
+		}
+	}
 }
