--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.3.6",
     "@angular-eslint/schematics": "^20.4.0",
+    "@angular-eslint/template-parser": "^20.4.0",
     "@angular/animations": "^20.3.6",
     "@angular/cdk": "^20.2.7",
     "@angular/cli": "^20.3.6",
@@ -50,14 +51,17 @@
     "@angular/platform-browser": "^20.3.6",
     "@angular/platform-browser-dynamic": "^20.3.6",
     "@angular/router": "^20.3.6",
-    "@types/jasmine": "^5.1.4",
+    "@types/jasmine": "^5.1.12",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "^22.5.0",
     "@types/webpack": "^5.28.5",
+    "angular-eslint": "20.4.0",
     "codelyzer": "^6.0.2",
     "electron": "^33.0.0",
     "electron-packager": "^17.1.2",
-    "jasmine-core": "~5.2.0",
+    "eslint": "^9.37.0",
+    "eslint-plugin-html": "^8.1.3",
+    "jasmine-core": "~5.12.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -71,8 +75,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
-    "tslint": "~6.1.3",
     "typescript": "^5.9.3",
+    "typescript-eslint": "8.46.0",
     "wait-on": "^5.2.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
