Migrate to standalone components and fix zone-less issues.

--- a/src/renderer/tsconfig.app.json
+++ b/src/renderer/tsconfig.app.json
@@ -4,6 +4,12 @@
     "outDir": "../../out-tsc/app",
     "strict": true
   },
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
+  },
   "files": [
     "src/main.ts",
     "src/polyfills.ts",
