--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,8 @@
 			"schematics":  {
 				"@schematics/angular:component": {
 					"inlineTemplate": true,
-					"inlineStyle":    true
+					"inlineStyle":    false,
+					"style":          "scss"
 				}
 			},
 			"root":        "src/renderer",
@@ -31,7 +32,7 @@
 							"src/renderer/src/assets"
 						],
 						"styles":     [
-							"src/renderer/src/styles.css",
+							"src/renderer/src/styles.scss",
 							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
 						],
 						"scripts":    [],
@@ -92,7 +93,7 @@
 							"src/renderer/src/assets"
 						],
 						"styles":      [
-							"src/renderer/src/styles.css",
+							"src/renderer/src/styles.scss",
 							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
 						],
 						"scripts":     []
