Integrated SQLite and added example functionalities. Refactored main process for more modular, structured approach. Fixed release/packaging system.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "main": "./dist/main/electron-main.js",
   "scripts": {
     "start": "npm run start:dev:hot-reloading:renderer+main",
+    "test:test": "ng test",
+    "test:lint": "ng lint",
+    "test:e2e": "ng e2e",
+    "clean": "npx rimraf dist release node_modules .angular",
+    "rebuild-sqlite": "electron-rebuild -f -w better-sqlite3",
+    "release": "npx rimraf dist release && npm run build:prod:all && npm run package",
     "start:dev:hot-reloading:renderer+main": "npm run build:dev:preload && npm-run-all -p hot:dev:renderer hot:dev:main",
     "start:dev:hot-reloading:renderer-only": "npm-run-all -p build:dev:preload build:dev:main && npm-run-all -p hot:dev:renderer hot:dev:main-no-restart",
     "start:static": "electron .",
-    "clean": "npx rimraf dist release-builds node_modules .angular",
+    "package": "electron-builder",
+    "postinstall": "electron-builder install-app-deps && npx electron-rebuild && npm run rebuild-sqlite",
     "build:dev:renderer": "ng build",
     "build:prod:renderer": "ng build --configuration production",
     "build:dev:main": "webpack --config ./src/main/webpack.ts --mode development",
@@ -24,26 +31,16 @@
     "update:webpack": "npm update webpack webpack-cli",
     "update:angular": "ng update @angular/cli @angular/core",
     "update:material": "npm update @angular/material @angular/cdk",
-    "test:test": "ng test",
-    "test:lint": "ng lint",
-    "test:e2e": "ng e2e",
-    "package": "electron-packager . angular-electron-boilerplate --asar --overwrite --prune=true --derefSymlinks=false --ignore=\"/node_modules|/src|.vscode|.editorconfig|.gitignore|.map|angular.json|tslint.json|README.md|package-lock.json|LICENSE\" --out=release-builds",
-    "release": "npm run build:prod:all  && npm run package",
-    "hot:dev:renderer": "ng serve --no-hmr & echo Renderer shutdown",
+    "hot:dev:renderer": "ng serve --no-hmr",
     "hot:dev:main": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && webpack --watch --config ./src/main/webpack.ts --mode development",
     "hot:dev:main-no-restart": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && electron . & kill-port --port 4200 >NUL"
   },
-  "private": true,
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.6",
-    "@angular-eslint/schematics": "^20.4.0",
-    "@angular-eslint/template-parser": "^20.4.0",
+  "private": false,
+  "dependencies": {
     "@angular/animations": "^20.3.6",
     "@angular/cdk": "^20.2.7",
-    "@angular/cli": "^20.3.6",
     "@angular/common": "^20.3.6",
     "@angular/compiler": "^20.3.6",
-    "@angular/compiler-cli": "^20.3.6",
     "@angular/core": "^20.3.6",
     "@angular/forms": "^20.3.6",
     "@angular/language-service": "^20.3.6",
@@ -51,14 +48,27 @@
     "@angular/platform-browser": "^20.3.6",
     "@angular/platform-browser-dynamic": "^20.3.6",
     "@angular/router": "^20.3.6",
+    "better-sqlite3": "^12.4.1",
+    "codelyzer": "^6.0.2",
+    "rxjs": "~7.8.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^20.3.6",
+    "@angular-eslint/schematics": "^20.4.0",
+    "@angular-eslint/template-parser": "^20.4.0",
+    "@angular/cli": "^20.3.6",
+    "@angular/compiler-cli": "^20.3.6",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jasmine": "^5.1.12",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "^22.5.0",
     "@types/webpack": "^5.28.5",
+    "@types/webpack-node-externals": "^3.0.4",
     "angular-eslint": "20.4.0",
-    "codelyzer": "^6.0.2",
     "electron": "^33.0.0",
+    "electron-builder": "^26.0.12",
     "electron-packager": "^17.1.2",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^9.37.0",
     "eslint-plugin-html": "^8.1.3",
     "jasmine-core": "~5.12.0",
@@ -71,7 +81,6 @@
     "kill-port-process": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
-    "rxjs": "~7.8.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
@@ -80,6 +89,7 @@
     "wait-on": "^5.2.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-electron-reload": "^1.0.1"
+    "webpack-electron-reload": "^1.0.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
