--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -1,17 +1,24 @@
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-      "baseUrl": "./",
-      "outDir": "../dist/main",
-      "sourceMap": true,
-      "declaration": false,
-      "module": "ESNext",
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "target": "ESNext",
-      "typeRoots": ["node_modules/@types"],
-      "lib": ["ESNext", "dom"],
-      "strict": true
-    }
-  }
+	"compileOnSave":   false,
+	"compilerOptions": {
+		"baseUrl":                      "./",
+		"outDir":                       "../dist/main",
+		"sourceMap":                    true,
+		"declaration":                  false,
+		"module":                       "ESNext",
+		"moduleResolution":             "node",
+		"emitDecoratorMetadata":        true,
+		"experimentalDecorators":       true,
+		"target":                       "ESNext",
+		"typeRoots":                    [
+			"node_modules/@types"
+		],
+		"lib":                          [
+			"ESNext",
+			"dom"
+		],
+		"strict":                       true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop":              true
+	}
+}
