--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "test:test": "ng test",
     "test:lint": "ng lint",
     "test:e2e": "ng e2e",
-    "clean": "npx rimraf dist release node_modules .angular",
+    "package-release": "npx rimraf dist release && npm run build:prod:all && electron-builder",
     "rebuild-sqlite": "electron-rebuild -f -w better-sqlite3",
-    "release": "npx rimraf dist release && npm run build:prod:all && npm run package",
+    "postinstall": "electron-builder install-app-deps && npx electron-rebuild && npm run rebuild-sqlite",
+    "clean": "npx rimraf dist release node_modules .angular",
     "start:dev:hot-reloading:renderer+main": "npm run build:dev:preload && npm-run-all -p hot:dev:renderer hot:dev:main",
     "start:dev:hot-reloading:renderer-only": "npm-run-all -p build:dev:preload build:dev:main && npm-run-all -p hot:dev:renderer hot:dev:main-no-restart",
     "start:static": "electron .",
-    "package": "electron-builder",
-    "postinstall": "electron-builder install-app-deps && npx electron-rebuild && npm run rebuild-sqlite",
     "build:dev:renderer": "ng build",
     "build:prod:renderer": "ng build --configuration production",
     "build:dev:main": "webpack --config ./src/main/webpack.ts --mode development",
