--- a/package.json
+++ b/package.json
@@ -1,94 +1,95 @@
 {
-  "name": "angular-electron-sqlite-boilerplate",
-  "version": "0.0.0",
-  "main": "./dist/main/electron-main.js",
-  "scripts": {
-    "start": "npm run start:dev:hot-reloading:renderer+main",
-    "test:test": "ng test",
-    "test:lint": "ng lint",
-    "test:e2e": "ng e2e",
-    "package-release": "npx rimraf dist release && npm run build:prod:all && electron-builder",
-    "rebuild-sqlite": "electron-rebuild -f -w better-sqlite3",
-    "postinstall": "electron-builder install-app-deps && npx electron-rebuild && npm run rebuild-sqlite",
-    "clean": "npx rimraf dist release node_modules .angular",
-    "start:dev:hot-reloading:renderer+main": "npm run build:dev:preload && npm-run-all -p hot:dev:renderer hot:dev:main",
-    "start:dev:hot-reloading:renderer-only": "npm-run-all -p build:dev:preload build:dev:main && npm-run-all -p hot:dev:renderer hot:dev:main-no-restart",
-    "start:static": "electron .",
-    "build:dev:renderer": "ng build",
-    "build:prod:renderer": "ng build --configuration production",
-    "build:dev:main": "webpack --config ./src/main/webpack.ts --mode development",
-    "build:prod:main": "webpack --config ./src/main/webpack.ts --mode production",
-    "build:dev:preload": "webpack --config ./src/preload/webpack.ts --mode development",
-    "build:prod:preload": "webpack --config ./src/preload/webpack.ts --mode production",
-    "build:dev:all": "npm run build:dev:renderer && npm run build:dev:main && npm run build:dev:preload",
-    "build:prod:all": "npm run build:prod:renderer && npm run build:prod:main && npm run build:prod:preload",
-    "build:watch:renderer": "ng build --watch",
-    "build:watch:main": "webpack --watch --config ./src/main/webpack.ts --mode development",
-    "build:watch:preload": "webpack --watch --config ./src/preload/webpack.ts --mode development",
-    "build:watch:all": "npm-run-all -p -r build:watch:renderer build:watch:main build:watch:preload",
-    "update:electron": "npm update electron electron-packager",
-    "update:webpack": "npm update webpack webpack-cli",
-    "update:angular": "ng update @angular/cli @angular/core",
-    "update:material": "npm update @angular/material @angular/cdk",
-    "hot:dev:renderer": "ng serve --no-hmr",
-    "hot:dev:main": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && webpack --watch --config ./src/main/webpack.ts --mode development",
-    "hot:dev:main-no-restart": "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && electron . & kill-port --port 4200 >NUL"
-  },
-  "private": false,
-  "dependencies": {
-    "@angular/animations": "^20.3.6",
-    "@angular/cdk": "^20.2.7",
-    "@angular/common": "^20.3.6",
-    "@angular/compiler": "^20.3.6",
-    "@angular/core": "^20.3.6",
-    "@angular/forms": "^20.3.6",
-    "@angular/language-service": "^20.3.6",
-    "@angular/material": "^20.2.7",
-    "@angular/platform-browser": "^20.3.6",
-    "@angular/platform-browser-dynamic": "^20.3.6",
-    "@angular/router": "^20.3.6",
-    "better-sqlite3": "^12.4.1",
-    "codelyzer": "^6.0.2",
-    "rxjs": "~7.8.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.6",
-    "@angular-eslint/schematics": "^20.4.0",
-    "@angular-eslint/template-parser": "^20.4.0",
-    "@angular/cli": "^20.3.6",
-    "@angular/compiler-cli": "^20.3.6",
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/jasmine": "^5.1.12",
-    "@types/jasminewd2": "~2.0.13",
-    "@types/node": "^22.5.0",
-    "@types/webpack": "^5.28.5",
-    "@types/webpack-node-externals": "^3.0.4",
-    "angular-eslint": "20.4.0",
-    "electron": "^33.0.0",
-    "electron-builder": "^26.0.12",
-    "electron-packager": "^17.1.2",
-    "electron-rebuild": "^3.2.9",
-    "eslint": "^9.37.0",
-    "eslint-plugin-html": "^8.1.3",
-    "jasmine-core": "~5.12.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "kill-port-process": "^2.3.0",
-    "npm-run-all": "^4.1.5",
-    "protractor": "~7.0.0",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.6.3",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "8.46.0",
-    "wait-on": "^5.2.1",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-electron-reload": "^1.0.1",
-    "webpack-node-externals": "^3.0.0"
-  }
+	"name":            "angular-electron-sqlite-boilerplate",
+	"version":         "0.0.0",
+	"main":            "./dist/main/electron-main.js",
+	"scripts":         {
+		"start":                                 "npm run start:dev:hot-reloading:renderer+main",
+		"test:test":                             "ng test",
+		"test:lint":                             "ng lint",
+		"test:e2e":                              "npm run build:dev:all && playwright test",
+		"package-release":                       "npx rimraf dist release && npm run build:prod:all && electron-builder",
+		"rebuild-sqlite":                        "electron-rebuild -f -w better-sqlite3",
+		"postinstall":                           "electron-builder install-app-deps && npx electron-rebuild && npm run rebuild-sqlite && npx playwright install",
+		"clean":                                 "npx rimraf dist release node_modules .angular",
+		"start:dev:hot-reloading:renderer+main": "npm run build:dev:preload && npm-run-all -p hot:dev:renderer hot:dev:main",
+		"start:dev:hot-reloading:renderer-only": "npm-run-all -p build:dev:preload build:dev:main && npm-run-all -p hot:dev:renderer hot:dev:main-no-restart",
+		"start:static":                          "electron .",
+		"build:dev:renderer":                    "ng build",
+		"build:prod:renderer":                   "ng build --configuration production",
+		"build:dev:main":                        "webpack --config ./src/main/webpack.ts --mode development",
+		"build:prod:main":                       "webpack --config ./src/main/webpack.ts --mode production",
+		"build:dev:preload":                     "webpack --config ./src/preload/webpack.ts --mode development",
+		"build:prod:preload":                    "webpack --config ./src/preload/webpack.ts --mode production",
+		"build:dev:all":                         "npm run build:dev:renderer && npm run build:dev:main && npm run build:dev:preload",
+		"build:prod:all":                        "npm run build:prod:renderer && npm run build:prod:main && npm run build:prod:preload",
+		"build:watch:renderer":                  "ng build --watch",
+		"build:watch:main":                      "webpack --watch --config ./src/main/webpack.ts --mode development",
+		"build:watch:preload":                   "webpack --watch --config ./src/preload/webpack.ts --mode development",
+		"build:watch:all":                       "npm-run-all -p -r build:watch:renderer build:watch:main build:watch:preload",
+		"update:electron":                       "npm update electron electron-packager",
+		"update:webpack":                        "npm update webpack webpack-cli",
+		"update:angular":                        "ng update @angular/cli @angular/core",
+		"update:material":                       "npm update @angular/material @angular/cdk",
+		"hot:dev:renderer":                      "ng serve --no-hmr",
+		"hot:dev:main":                          "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && webpack --watch --config ./src/main/webpack.ts --mode development",
+		"hot:dev:main-no-restart":               "wait-on tcp:4200 && set WEBPACK_DEV_SERVER_URL=http://localhost:4200 && electron . & kill-port --port 4200 >NUL"
+	},
+	"private":         false,
+	"dependencies":    {
+		"@angular/animations":               "^20.3.6",
+		"@angular/cdk":                      "^20.2.7",
+		"@angular/common":                   "^20.3.6",
+		"@angular/compiler":                 "^20.3.6",
+		"@angular/core":                     "^20.3.6",
+		"@angular/forms":                    "^20.3.6",
+		"@angular/language-service":         "^20.3.6",
+		"@angular/material":                 "^20.2.7",
+		"@angular/platform-browser":         "^20.3.6",
+		"@angular/platform-browser-dynamic": "^20.3.6",
+		"@angular/router":                   "^20.3.6",
+		"better-sqlite3":                    "^12.4.1",
+		"codelyzer":                         "^6.0.2",
+		"rxjs":                              "~7.8.1"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular":    "^20.3.6",
+		"@angular-eslint/schematics":       "^20.4.0",
+		"@angular-eslint/template-parser":  "^20.4.0",
+		"@angular/cli":                     "^20.3.6",
+		"@angular/compiler-cli":            "^20.3.6",
+		"@playwright/test":                 "^1.56.1",
+		"@types/better-sqlite3":            "^7.6.13",
+		"@types/jasmine":                   "^5.1.12",
+		"@types/jasminewd2":                "~2.0.13",
+		"@types/node":                      "^22.5.0",
+		"@types/webpack":                   "^5.28.5",
+		"@types/webpack-node-externals":    "^3.0.4",
+		"angular-eslint":                   "20.4.0",
+		"electron":                         "^33.0.0",
+		"electron-builder":                 "^26.0.12",
+		"electron-packager":                "^17.1.2",
+		"electron-rebuild":                 "^3.2.9",
+		"eslint":                           "^9.37.0",
+		"eslint-plugin-html":               "^8.1.3",
+		"jasmine-core":                     "~5.12.0",
+		"jasmine-spec-reporter":            "~7.0.0",
+		"karma":                            "^6.4.4",
+		"karma-chrome-launcher":            "~3.2.0",
+		"karma-coverage-istanbul-reporter": "~3.0.3",
+		"karma-jasmine":                    "~5.1.0",
+		"karma-jasmine-html-reporter":      "^2.1.0",
+		"kill-port-process":                "^2.3.0",
+		"npm-run-all":                      "^4.1.5",
+		"playwright":                       "^1.56.1",
+		"ts-loader":                        "^9.5.1",
+		"ts-node":                          "^10.9.2",
+		"tslib":                            "^2.6.3",
+		"typescript":                       "^5.9.3",
+		"typescript-eslint":                "8.46.0",
+		"wait-on":                          "^5.2.1",
+		"webpack":                          "^5.94.0",
+		"webpack-cli":                      "^5.1.4",
+		"webpack-electron-reload":          "^1.0.1",
+		"webpack-node-externals":           "^3.0.0"
+	}
 }
